tests/baselines/reference/dottedModuleName.errors.txt
tests/cases/compiler/dottedModuleName.ts(3,29): error TS1144: '{' or ';' expected.
tests/cases/compiler/dottedModuleName.ts(3,33): error TS2304: Cannot find name 'x'.


==== tests/cases/compiler/dottedModuleName.ts (2 errors) ====
    module M {
        export module N {
    	export function f(x:number)=>2*x;
    	                           ~~
!!! error TS1144: '{' or ';' expected.
    	                               ~
!!! error TS2304: Cannot find name 'x'.
    	export module X.Y.Z {
    	    export var v2=f(v);
    	}
        }
    }
    
    
    
    module M.N {
        export module X {
    	export module Y.Z {
    	    export var v=f(10);
    	}
        }
    }
    